# thumpy-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_engine.sh  cspell.json  vcpkg.json
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml  mac_os.yml  ubuntu-linux.yml  ubuntu_linux.yml  windows.yml
src/: CMakeLists.txt  main.cpp  testing.cmake
src/assets/models/: migrate_models.cmake
src/assets/shaders/: compile_shaders.cmake
src/assets/shaders/compiled/: texture.vert.spv
src/assets/textures/: migrate_textures.cmake
src/io/: CMakeLists.txt  input_manager.cpp  input_manager.hpp
src/logger/: CMakeLists.txt  file_logger.cpp  file_logger.hpp  logger.cpp  logger.hpp  logger_helper.cpp  logger_helper.hpp  term_logger.cpp  term_logger.hpp
src/shaders/: compile_shaders.cmake  compile_shaders.sh
src/testing/: CMakeLists.txt  logger_test.cc  window_manager_test.cc
src/window_manager/: CMakeLists.txt  vulkan_window.cpp  vulkan_window.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
src/window_manager/vulkan/: swap_chain.cpp  swap_chain.hpp  vulkan_buffers.cpp  vulkan_buffers.hpp  vulkan_command.cpp  vulkan_command.hpp  vulkan_construct.cpp  vulkan_construct.hpp  vulkan_debug.cpp  vulkan_debug.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_framebuffers.cpp  vulkan_framebuffers.hpp  vulkan_helper.cpp  vulkan_helper.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_initializers.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_render.cpp  vulkan_render.hpp  vulkan_swap_chain.cpp  vulkan_swap_chain.hpp  vulkan_window.cpp  vulkan_window.hpp
