

# enable_testing()

# set(TEST_SOURCES
#   logger_test.cc
#   window_manager_test.cc
# )
# add_executable(engine_unit_test ${TEST_SOURCES})

# target_link_libraries(
#   engine_unit_test
#   GTest::gtest_main
#   logger
#   windows_manager
# )

# include(GoogleTest)
# gtest_discover_tests(engine_unit_test)
